# pySpark_poc3

./: .gitignore  README.md  log4j.properties  main.py  poc3.py  requirements.txt  scripts.txt  tests.py
.github/workflows/: python-test-stats.yml
poc3_package/: pyproject.toml
poc3_package/src/myPackage/: log4j.properties  poc3.py
poc3_package/src/myPackage/poc3_dataset/: clients.csv  financial.csv
poc3_package/tests/: tests.py
