[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "poc3_package"
version = "0.0.1"
authors = [
  { name="Wojciech kaminski", email="wojciech@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"

[tool.hatchling.dependencies]
pyspark = "^3.1"
chispa = "^0.5"
typing-extensions = "^3.10"
argparse = "^1.4"
functools = "^3.10"
